# paper-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: PaperCard.vue  ReportView.vue  SearchBar.vue  StatusTimeline.vue
frontend/src/composables/: useSSE.js
frontend/src/router/: index.js
frontend/src/stores/: research.js
frontend/src/views/: Home.vue
src/agents/: analyze_agent.py  openalex_search.py  orchestrator.py  read_agent.py  search_agent.py  write_agent.py
src/core/: prompts.py  state_models.py
src/services/: db.py
